--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dev_dependencies:
   flutter_launcher_name: "^0.0.1"
   
 flutter_launcher_name:
-  name: "Prayer Time"
+  name: "Bismillah"
 
 flutter_icons:
   android: "launcher_icon"
